fix: change padding on mobile version

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -456,7 +456,7 @@ footer {
   }
 
   section {
-    padding: 30px 30px 50px 30px;
+    padding: 20px;
     margin-top: 130px;
     margin-bottom: 0px;
     width: auto;
@@ -486,7 +486,7 @@ footer {
     }
   }
   section {
-    padding: 30px 30px 50px 30px;
+    padding: 20px;
     margin-top: 5px;
   }
 
